# ats-storable

./: .gitignore  .hlint.yaml  .travis.yml  README.md  ats-storable.cabal  atspkg.dhall  cabal.project
aeson-demo/: .gitignore  .travis.yml  README.md  atspkg.dhall
aeson-demo/hs/: AesonDemo.hs  aeson-demo.cabal
aeson-demo/src/: aeson-demo.dats
ats-src/: types.dats
dhall-ats/: .gitignore  .travis.yml  README.md  TODO.md  atspkg.dhall  example.dhall
dhall-ats/hs/: Foreign.hs  foreign.cabal
dhall-ats/src/: dhall-ats.dats
src/Foreign/Storable/: ATS.hs
test/: Spec.hs
